added scheduler and integrated AI to the bot to handle responses